# AI-PharmD-MedAgentBench

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  benchmark.sh  docker-compose.yml  leaderboard-config.json  pyproject.toml  requirements.txt  sample.env  scenario.toml
config/: scenario.toml
experiments/subtask1/: batch_1_tasks_20260201_073848.json  evaluation_task1_5_20260201_073848.json
leaderboard/: .gitignore  LEADERBOARD_SETUP.md  README.md  assess.py  docker-compose.yml.template  generate_compose.py  generate_submission.py  leaderboard-config.json  record_provenance.py  results_format_adapter.py  scenario.toml
leaderboard/.github/workflows/: assess.yml
mcp_skills/: .gitignore  Dockerfile  README.md  __init__.py  pyproject.toml
mcp_skills/fastmcp/: __init__.py  app.py  server.py
mcp_skills/fhir/: __init__.py  client.py  eval_tools.py  models.py  resources.py  tools.py
mcp_skills/pokemon/: __init__.py  data.py  tools.py
purple_agent/: Dockerfile  README.md  pyproject.toml
purple_agent/src/: agent.py  executor.py  messenger.py  server.py
purple_agent/tests/: conftest.py  test_agent.py
scripts/: README.md  cleanup_docker.sh  configure_remote.sh  demo_video_script.md  quick-start.sh  run.sh  run_all.sh  run_all_tasks.py  run_evaluation.py  run_full_pipeline.sh  run_scenario.py  start_fhir.sh  start_mcp.sh  test_assessment.py  test_fix.py  test_parsing.py  test_parsing_standalone.py
src/: agent.py  executor.py  flow.py  messenger.py  nodes.py  pocketflow.py  server.py
src/prompts/: __init__.py  agent.txt  agent_dynamic.txt  mcp.txt
src/purple/: Dockerfile.purple-agent  __init__.py  agent.py  executor.py  server.py
src/tasks/: __init__.py
src/tasks/subtask1/: __init__.py  funcs_mapping.md  funcs_mcp.json  refsol.py  tasks.json  utils.py
src/tasks/subtask2/: __init__.py  evaluator.py  run_evaluation.py  task_loader.py
src/utils/: __init__.py  call_gemini.py  evaluation.py  fhir.py  mcp_discovery.py  task_logger.py
tests/: conftest.py  full_test.py  mock_purple_agent.py  test.sh  test_agent.py  test_evaluation.py  test_flow.py  test_mcp.py  test_mcp_tools.py  test_nodes.py  test_with_purple.sh
